--- a/index7.html
+++ b/index7.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="main-navigation">
+        <ul class="menu-list">
+            <li><a href="#about-us">About us</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
 </body>
 </html>
