--- a/index7.html
+++ b/index7.html
@@ -13,5 +13,12 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
+        <hr>
+        <section>
+            <h2 id="about-us">About us</h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, deleniti? Numquam minus, veritatis
+            possimus provident tempore fugit aperiam excepturi rerum doloremque exercitationem dolores repellat natus
+            deserunt, odio, aspernatur dolorum. Voluptatibus!
+        </section>
 </body>
 </html>
