--- a/index7.html
+++ b/index7.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <nav class="main-navigation">
         <ul class="menu-list">
@@ -20,5 +22,26 @@
             possimus provident tempore fugit aperiam excepturi rerum doloremque exercitationem dolores repellat natus
             deserunt, odio, aspernatur dolorum. Voluptatibus!
         </section>
+        <hr>
+        <section>
+            <h2 id="skills">Skills</h2>
+            <div class="skill">
+                <h3>Nagłówek</h3>
+                <p>Paragraf</p>
+            </div>
+            <div class="skill">
+                <h3>Nagłówek</h3>
+                <p>Paragraf</p>
+            </div>
+            <div class="skill">
+                <h3>Nagłówek</h3>
+                <p>Paragraf</p>
+            </div>
+            <div class="skill">
+                <h3>Nagłówek</h3>
+                <p>Paragraf</p>
+            </div>
+        </section>
 </body>
+
 </html>
